Add SEO landing pages with React Router: Home, Is It Halal, Halal Substitutes, How It Works, About pages with meta tags, sitemap, and robots.txt

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Halal Recipe Converter</title>
+  <meta name="description" content="Convert any recipe to halal-compliant with our free AI-powered recipe converter. Get halal substitutes, Islamic dietary guidance, and confidence scores." />
+  <meta name="keywords" content="halal recipe converter, halal food, halal substitutes, Islamic cooking, halal ingredients" />
+  <title>Halal Kitchen - Free Halal Recipe Converter | Convert Any Recipe to Halal</title>
+  <link rel="canonical" href="https://halalkitchen.com/" />
 </head>
 <body>
   <div id="root"></div>
