--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Convert any recipe to halal-compliant with our free AI-powered recipe converter. Get halal substitutes, Islamic dietary guidance, and confidence scores." />
   <meta name="keywords" content="halal recipe converter, halal food, halal substitutes, Islamic cooking, halal ingredients" />
+  <meta name="google-site-verification" content="dkl09lAo3EukOwJ7chrKaTvKH3eT0s1zVAkeIjOvKkg" />
   <title>Halal Kitchen - Free Halal Recipe Converter | Convert Any Recipe to Halal</title>
   <link rel="canonical" href="https://halalkitchen.com/" />
 </head>
