Update domain from halalkitchen.com to halalkitchen.app
- Update all canonical URLs in SEO pages
- Update sitemap.xml with new domain
- Update robots.txt sitemap reference
- Update index.html canonical URL
- Ensure all domain references use halalkitchen.app

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="halal recipe converter, halal food, halal substitutes, Islamic cooking, halal ingredients" />
   <meta name="google-site-verification" content="dkl09lAo3EukOwJ7chrKaTvKH3eT0s1zVAkeIjOvKkg" />
   <title>Halal Kitchen - Free Halal Recipe Converter | Convert Any Recipe to Halal</title>
-  <link rel="canonical" href="https://halalkitchen.com/" />
+  <link rel="canonical" href="https://halalkitchen.app/" />
 </head>
 <body>
   <div id="root"></div>
