Add Plausible Analytics for privacy-friendly tracking
- Add Plausible Analytics script to index.html head section
- Privacy-friendly analytics solution that respects user privacy
- Script will load on all pages via index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <meta name="google-site-verification" content="dkl09lAo3EukOwJ7chrKaTvKH3eT0s1zVAkeIjOvKkg" />
   <title>Halal Kitchen - Free Halal Recipe Converter | Convert Any Recipe to Halal</title>
   <link rel="canonical" href="https://halalkitchen.app/" />
+  
+  <!-- Privacy-friendly analytics by Plausible -->
+  <script async src="https://plausible.io/js/pa-d2FzP2YlWiPQeqdcg3oDQ.js"></script>
+  <script>
+    window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
+    plausible.init()
+  </script>
 </head>
 <body>
   <div id="root"></div>
