--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="canonical" href="https://halalkitchen.app/" />
   
   <!-- Privacy-friendly analytics by Plausible -->
-  <script async src="https://plausible.io/js/pa-d2FzP2YlWiPQeqdcg3oDQ.js"></script>
+  <script async data-domain="halalkitchen.app" src="https://plausible.io/js/pa-d2FzP2YlWiPQeqdcg3oDQ.js"></script>
   <script>
     window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
     plausible.init()
