Add Instacart verification meta tag to static index.html
- Move meta tag from React component to static index.html
- Ensures tag is present in raw HTML source for verification bots
- Uses 'value' attribute as required by Instacart

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Convert any recipe to halal-compliant with our free AI-powered recipe converter. Get halal substitutes, Islamic dietary guidance, and confidence scores." />
   <meta name="keywords" content="halal recipe converter, halal food, halal substitutes, Islamic cooking, halal ingredients" />
   <meta name="google-site-verification" content="dkl09lAo3EukOwJ7chrKaTvKH3eT0s1zVAkeIjOvKkg" />
+  <meta name="impact-site-verification" value="fe2ab7e4-4056-474d-ad17-32d276d1e47c" />
   <title>Halal Kitchen - Free Halal Recipe Converter | Convert Any Recipe to Halal</title>
   <link rel="canonical" href="https://halalkitchen.app/" />
   
